--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+body {
+    font-family: 'Muli', sans-serif;
+}
+
+.fn,
+h1,h2,h3,h4,h5,h6,
+button, input, 
+mat-label, mat-chip, mat-checkbox,
+mat-button, mat-form-field,
+a, ul, li,
+table,
+p {
+    /* font-size: 18px; */
+    font-family: 'Muli', sans-serif !important;
+}
+
+svg {
+    margin-top: -6px;
+}
