--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,19 @@ p {
 svg {
     margin-top: -6px;
 }
+
+::-webkit-scrollbar {
+    background: transparent;
+    width: 8px;
+    height: 8px;
+    cursor: grab;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background:rgba(158, 157, 157, 0.6);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #673AB7; 
+}
